--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <h3>Titre 3></h3>
 
         <button>enregistrez</button>
+    
+    <a href="page1.html">Page1</a>
+    <a href="page2.html">Page 2</a>
 
 </body>
 </html>
